toolkit/content/process-content.js
@@ -10,3 +10,11 @@ var { classes: Cc, interfaces: Ci, utils: Cu } = Components;
 // and for those that match URLs provided by the parent process will set up
 // a dedicated message port and notify the parent process.
 Cu.import("resource://gre/modules/RemotePageManager.jsm");
+Cu.import("resource://gre/modules/Services.jsm");
+
+Services.cpmm.addMessageListener("gmp-plugin-crash", msg => {
+  let gmpservice = Cc["@mozilla.org/gecko-media-plugin-service;1"]
+                     .getService(Ci.mozIGeckoMediaPluginService);
+
+  gmpservice.RunPluginCrashCallbacks(msg.data.pluginID, msg.data.pluginName);
+});
